--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=http://localhost:8000
+#VITE_API_BASE_URL=http://localhost:8000
+VITE_API_BASE_URL=https://product-catalog-backend-3n2c.onrender.com
